<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="361dp"
        android:layout_height="460dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn2"
            app:layout_constraintEnd_toEndOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:text="@string/decimalText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnEquals"
            app:layout_constraintEnd_toEndOf="@+id/btn3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btn3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/multiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSubstract"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesCloseText" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnParenthesesOpenText"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesOpenText" />

        <ImageButton
            android:id="@+id/btnDeleteLast"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/btnDivide"
            app:layout_constraintStart_toStartOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteLast" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sevenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnClear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_background"
            android:text="@string/fourText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnMult"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesCloseText"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteLast" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/addText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnEquals"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnSubstract" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/oneText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn1"
            app:layout_constraintEnd_toEndOf="@+id/btn5"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btnParenthesesOpenText"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/parenthesesOpenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteLast" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/equals_button_background"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/btn2"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/zeroText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDot"
            app:layout_constraintEnd_toEndOf="@+id/btn2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btnParenthesesCloseText"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesOpenText"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteLast" />

        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/substractText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/btnAdd"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnMult" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/displayHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>